Quake/common.h

extern int (*BigLong) (int l);
extern int (*LittleLong) (int l);
extern float (*BigFloat) (float l);
extern float (*LittleFloat) (float l);
void COM_Effectinfo_Enumerate (int (*cb) (const char *pname)); // spike -- for dp compat
/* locale-insensitive strcasecmp replacement functions: */
int q_strcasecmp (const char *s1, const char *s2);
/* locale-insensitive case-insensitive alternative to strstr */
char *q_strcasestr (const char *haystack, const char *needle);
/* Trim whitespace on both ends, modifying str on-place: Returns the new start of str after trim */
char *q_strtrim (char *str);
/* Split str around any of the characters of sep_set, gobbling any number of consecutive found separators, modifying str in-place.
In addition, if nb_substr != NULL:
  The returned char** subs is the array of the nb_substr splitted sub-strings of str: subs[k] for k in [0 .. nb_substr [.
else if nb_substr == NULL:
   q_strsplit returns NULL.
The returned char** subs array is allocated by Mem_Alloc.
*/
char **q_strsplit (char *str, const char *sep_set, size_t *nb_substr);
/* snprintf, vsnprintf : always use our versions. */
int q_snprintf (char *str, size_t size, const char *format, ...) FUNC_PRINTF (3, 4);
char *va (const char *format, ...) FUNC_PRINTF (1, 2);
extern struct cvar_s registered;
extern qboolean		 standard_quake, rogue, hipnotic;