rust/quake-ctest/include/c_ref_prelude.h

#define hostCacheCount				 c_ref_hostCacheCount
#define net_hostport			 c_ref_net_hostport
#define ipv4Available			 c_ref_ipv4Available
#define ipv6Available			 c_ref_ipv6Available
/* strlcpy.c / strlcat.c */
#define q_strlcpy			  c_ref_q_strlcpy
#define rogue							 c_ref_rogue
extern qboolean		 multiuser;
#define S_ExtraUpdate		 c_ref_S_ExtraUpdate
#define S_LocalSound		 c_ref_S_LocalSound
#define bgmvolume			 c_ref_bgmvolume
#define sfxvolume			 c_ref_sfxvolume
#define snd_waterfx			 c_ref_snd_waterfx
/* declared file-locally in snd_dma.c/snd_mix.c; the renames above apply */
extern cvar_t snd_waterfx;
#define SIGNONS	   4
extern double realtime;
/* ---- Phase 7 M9f (T9f.0): the pr_ext.c oracle's renderer-facing slice ----
 *
 * stubs/pr_ext_ref.c composes Quake/pr_ext.c into this link (the composing-TU
 * pattern; see that file's header). pr_ext.c reaches a handful of glquake.h /
 * draw.h declarations the real headers cannot supply here, because glquake.h
 * pulls vulkan/vulkan.h and tasks.h. Two kinds of declaration follow, and they
 * are labelled individually:
 *
 *   FAITHFUL   -- character-for-character the real declaration; a Phase 8 port
 *                 can trust it.
 *   COMPILE-ONLY -- a minimal stand-in with the right *spelling* but not the
 *                 real layout. Every consumer of one is Phase 8 renderer code
 *                 (PF_cl_draw*, DrawQC_CharacterQuad, PF_getsurface*) that no
 *                 differential drives and that nothing in this link calls, and
 *                 nothing here takes sizeof() of a COMPILE-ONLY struct.
 *
 * Definitions for the objects declared here live in stubs/pr_ext_ref.c as link
 * doubles, not in a real renderer TU.
 */

/* FAITHFUL: glquake.h:41, :107, :636, :639 */
extern int glwidth, glheight;
typedef struct VkCommandBuffer_T *VkCommandBuffer;
typedef struct VkRenderPass_T	 *VkRenderPass;
typedef struct vulkan_pipeline_s
{
	VkPipeline				 handle;
	vulkan_pipeline_layout_t layout;
} vulkan_pipeline_t;
/* COMPILE-ONLY: glquake.h:339-349. pr_ext.c only ever dereferences `cb`; the
 * real struct also carries `canvastype current_canvas`, `uint32_t
 * vbo_indices[MAX_BATCH_SIZE]` and `unsigned int num_vbo_indices`, which are
 * omitted because MAX_BATCH_SIZE and canvastype are renderer-private and
 * nothing here takes sizeof (cb_context_t). */
typedef struct cb_context_s
{
	VkCommandBuffer	  cb;
	VkRenderPass	  render_pass;
	int				  render_pass_index;
	int				  subpass;
	vulkan_pipeline_t current_pipeline;
} cb_context_t;
qpic_t *Draw_TryCachePic (const char *path, unsigned int texflags, int picflags);
void	Draw_Pic (cb_context_t *cbx, float x, float y, qpic_t *pic, float alpha, qboolean alpha_blend);
#define cl_alwaysrun     c_ref_cl_alwaysrun
#define cl_forwardspeed  c_ref_cl_forwardspeed
#define cl_bottomcolor                    c_ref_cl_bottomcolor
#define cl_confirmquit                    c_ref_cl_confirmquit
#define cl_name                           c_ref_cl_name
#define cl_startdemos                     c_ref_cl_startdemos
#define cl_topcolor                       c_ref_cl_topcolor
#define m_pitch                           c_ref_m_pitch
#define sensitivity                       c_ref_sensitivity
#define cl_bob                    c_ref_cl_bob
#define cl_rollangle              c_ref_cl_rollangle
#define crosshair                 c_ref_crosshair
#define crosshair_def             c_ref_crosshair_def
#define v_gunkick                 c_ref_v_gunkick
/* quakedef.h:412-461 verbatim: the file-list stratum host_cmd.c defines and
 * menu.c consumes. */
typedef struct filelist_item_s
{
	char					name[32];
	struct filelist_item_s *next;
} filelist_item_t;
extern filelist_item_t *modlist;
extern filelist_item_t *extralevels;
typedef enum
{
	MAPTYPE_CUSTOM_MOD_START,
	MAPTYPE_CUSTOM_MOD_LEVEL,
	MAPTYPE_CUSTOM_MOD_END,
	MAPTYPE_CUSTOM_MOD_DM,

	MAPTYPE_MOD_START,
	MAPTYPE_MOD_LEVEL,
	MAPTYPE_MOD_END,
	MAPTYPE_MOD_DM,

	MAPTYPE_CUSTOM_ID_START,
	MAPTYPE_CUSTOM_ID_LEVEL,
	MAPTYPE_CUSTOM_ID_END,
	MAPTYPE_CUSTOM_ID_DM,

	MAPTYPE_ID_START,
	MAPTYPE_ID_EP1_LEVEL,
	MAPTYPE_ID_EP2_LEVEL,
	MAPTYPE_ID_EP3_LEVEL,
	MAPTYPE_ID_EP4_LEVEL,
	MAPTYPE_ID_END,
	MAPTYPE_ID_DM,
	MAPTYPE_ID_LEVEL,

	MAPTYPE_BMODEL,

	MAPTYPE_COUNT,
} maptype_t;
maptype_t	ExtraMaps_GetType (const filelist_item_t *item);
qboolean	ExtraMaps_IsStart (maptype_t type);
const char *ExtraMaps_GetMessage (const filelist_item_t *item);
extern filelist_item_t **extralevels_sorted;
const char *Modlist_GetFullName (const filelist_item_t *item);
char *PL_GetClipboardData (void); /* platform.h:34 */
/* quakedef.h:238-251 */
typedef enum
{
	CANVAS_NONE,
	CANVAS_DEFAULT,
	CANVAS_CONSOLE,
	CANVAS_MENU,
	CANVAS_SBAR,
	CANVAS_WARPIMAGE,
	CANVAS_CROSSHAIR,
	CANVAS_BOTTOMLEFT,
	CANVAS_TOPLEFT,
	CANVAS_BOTTOMRIGHT,
	CANVAS_TOPRIGHT,
	CANVAS_CSQC,
	CANVAS_INVALID = -1
} canvastype;
void Draw_Character (cb_context_t *cbx, float x, float y, int num);						 /* draw.h:46 */
void Draw_ConsoleBackground (cb_context_t *cbx);										 /* draw.h:50 */
void Draw_Pic (cb_context_t *cbx, float x, float y, qpic_t *pic, float alpha, qboolean alpha_blend); /* draw.h:47 */
void GL_SetCanvas (cb_context_t *cbx, canvastype newcanvas);							 /* draw.h:64 */
void GL_SetCanvasColor (float r, float g, float b, float a);							 /* draw.h:65 */
extern double host_rawframetime; /* quakedef.h:406 */
void S_LocalSound (const char *name); /* q_sound.h:184 */
qpic_t *Draw_CachePic (const char *path);						  /* draw.h:48 */
extern cvar_t scr_style; /* gl_screen.c:94 */
/* ---- Phase 7 M10e seam: the three declarations Quake/menu.c reaches that no
 * header above supplies (task M10e). menu.c becomes an oracle TU here,
 * composed by stubs/menu_ref.c rather than listed in build.rs's C_SOURCES;
 * the reason is written out at the top of that file. menu.h is NOT force-
 * included here -- stubs/menu_ref.c includes it itself, after its rename
 * block, so that menu.h's prototypes are renamed in step with menu.c's
 * definitions.
 *
 * The two Draw_ entries are copied verbatim from the draw.h line named on
 * each; their doubles live in stubs/draw_ref.c beside the rest of the shared
 * draw recorder. SDL_GetMouseState is declared with SDL2's `int *`
 * signature because the harness builds without USE_SDL3, so menu.c:4630-4635
 * takes the #else branch; the double is in stubs/menu_ref.c, and the port
 * half reaches the same fixture position through Menu_Glue_GetMouseState.
 * No Rust TU names an SDL symbol. ---- */

void Draw_TransPicTranslate (cb_context_t *cbx, float x, float y, qpic_t *pic, int top, int bottom); /* draw.h:49 */
void Draw_FadeScreen (cb_context_t *cbx);															 /* draw.h:53 */