Quake/net.h

#define NET_NAMELEN 64
extern int DEFAULTnet_hostport;
extern cvar_t hostname;
typedef char qhostaddr_t[NET_NAMELEN];
// returns data in net_message, qsocket says which client its from

int NET_ListAddresses (qhostaddr_t *addresses, int maxaddresses);
// Server list related globals:
extern qboolean slistInProgress;
extern qboolean slist_silent;
extern enum slistScope_e { SLIST_LOOP, SLIST_LAN, SLIST_INTERNET } slist_scope;
void		NET_Slist_f (void);
void		NET_SlistSort (void);
const char *NET_SlistPrintServer (size_t n);
const char *NET_SlistPrintServerName (size_t n);