rust/quake-c-sys/src/menu.rs


    /* gl_draw.c -- `cb_context_t *` and `qpic_t *` are opaque here */
    pub fn Draw_CachePic(path: *const c_char) -> *mut c_void;
    pub fn Draw_TryCachePic(path: *const c_char, texflags: c_uint, picflags: c_int) -> *mut c_void;
    pub fn Draw_Character(cbx: *mut c_void, x: c_float, y: c_float, num: c_int);
    pub fn Draw_Pic(
        cbx: *mut c_void,
        x: c_float,
        y: c_float,
        pic: *mut c_void,
        alpha: c_float,
        alpha_blend: qboolean,
    );
    pub fn Draw_TransPicTranslate(
        cbx: *mut c_void,
        x: c_float,
        y: c_float,
        pic: *mut c_void,
        top: c_int,
        bottom: c_int,
    );
    pub fn Draw_ConsoleBackground(cbx: *mut c_void);
    pub fn Draw_FadeScreen(cbx: *mut c_void);
    pub fn GL_SetCanvas(cbx: *mut c_void, newcanvas: c_int);
    pub fn GL_SetCanvasColor(r: c_float, g: c_float, b: c_float, a: c_float);
    /// `gl_draw.c` -- `qpic_t *pic_up, *pic_down;` (`menu.c:2408`).
    pub static mut pic_up: *mut c_void;
    /// `gl_draw.c` -- `qpic_t *pic_up, *pic_down;` (`menu.c:2408`).
    pub static mut pic_down: *mut c_void;
    /// `gl_vidsdl.c` -- the drawable size the menu canvas is derived from.
    pub static mut glwidth: c_int;
    /// `gl_vidsdl.c` -- see `glwidth`.
    pub static mut glheight: c_int;
    /// `gl_screen.c` -- `float scr_con_current;` (`menu.c:4675`).
    pub static mut scr_con_current: c_float;
    /// `host.c` -- `double realtime;` (`menu.c:657`, the main-menu cursor
    /// animation).
    pub static mut realtime: f64;
    /// `quakedef.h:406` -- `double host_rawframetime;` (unscaled and
    /// unbounded), the maps-menu ticker's time source (`menu.c:2679`,
    /// `:2681`).
    pub static mut host_rawframetime: f64;

    /* keys.c */
    pub fn Key_KeynumToString(keynum: c_int) -> *const c_char;
    pub fn Key_SetBinding(keynum: c_int, binding: *const c_char);
    /// `keys.c` -- `qboolean keydown[256];` (`menu.c:113`).
    pub static mut keydown: [qboolean; 256];
    /// `keys.h:144` -- `keydest_t key_dest;`, an `int`-ranked enum.
    pub static mut key_dest: c_int;

    /* input.c */
    pub fn IN_Activate();
    pub fn IN_Deactivate(free_cursor: qboolean);

    /* platform */
    pub fn PL_GetClipboardData() -> *mut c_char;

    /* net_main.c */
    pub fn NET_Slist_f();
    pub fn NET_SlistSort();
    pub fn NET_SlistPrintServer(n: usize) -> *const c_char;
    pub fn NET_SlistPrintServerName(n: usize) -> *const c_char;
    pub fn NET_ListAddresses(addresses: *mut c_void, maxaddresses: c_int) -> c_int;
    /// `net.h:39` -- `int net_hostport;` (`menu.c:4945`).
    pub static mut net_hostport: c_int;
    /// `net.h:38` -- `int DEFAULTnet_hostport;`, the port the LAN-config menu
    /// resets to on entry (`menu.c:3697`).
    pub static mut DEFAULTnet_hostport: c_int;
    /// `net.h:106` -- `qboolean slistInProgress;`.
    pub static mut slistInProgress: qboolean;
    /// `net.h:107` -- `qboolean slist_silent;`.
    pub static mut slist_silent: qboolean;
    /// `net.h:108` -- `enum slistScope_e slist_scope;`, an `int`-ranked enum.
    pub static mut slist_scope: c_int;
    /// `net.h:110` -- `size_t hostCacheCount;`.
    pub static mut hostCacheCount: usize;
    /// `net.h:119` -- `qboolean ipv4Available;`.
    pub static mut ipv4Available: qboolean;
    /// `net.h:120` -- `qboolean ipv6Available;`.
    pub static mut ipv6Available: qboolean;

    /* snd_dma.c */
    pub fn S_ExtraUpdate();
    pub fn S_LocalSound(name: *const c_char);

    /* gl_model.c / host_cmd.c file lists */
    pub fn Mod_LoadMapDescription(
        desc: *mut c_char,
        maxchars: usize,
        map: *const c_char,
    ) -> qboolean;
    pub fn Modlist_GetFullName(item: *const filelist_item_t) -> *const c_char;
    pub fn ExtraMaps_GetType(item: *const filelist_item_t) -> c_int;
    pub fn ExtraMaps_IsStart(type_: c_int) -> qboolean;
    pub fn ExtraMaps_GetMessage(item: *const filelist_item_t) -> *const c_char;
    /// `quakedef.h:418` -- `filelist_item_t *modlist;`.
    pub static mut modlist: *mut filelist_item_t;
    /// `quakedef.h:419` -- `filelist_item_t *extralevels;`.
    pub static mut extralevels: *mut filelist_item_t;
    /// `quakedef.h:458` -- `filelist_item_t **extralevels_sorted;`, the
    /// type-ordered index the maps menu walks (`menu.c:2971`).
    pub static mut extralevels_sorted: *mut *mut filelist_item_t;

    /* zone.c */
    pub fn Mem_Alloc(size: usize) -> *mut c_void;
    pub fn Mem_Free(ptr: *const c_void);

    /* sys */
    pub fn Sys_GetPrefPath(org: *const c_char, app: *const c_char) -> *mut c_char;
    pub fn Sys_fopen(path: *const c_char, mode: *const c_char) -> *mut FILE;
    pub fn Sys_FileRead(handle: c_int, dest: *mut c_void, count: c_int) -> c_int;
    /// `quakedef.h:519` -- `qboolean multiuser;` (`menu.c:833`).
    pub static mut multiuser: qboolean;

    /* string helpers (common.c / strl_fn.h) */
    pub fn va(format: *const c_char, ...) -> *mut c_char;
    pub fn q_snprintf(str_: *mut c_char, size: usize, format: *const c_char, ...) -> c_int;
    pub fn q_strlcpy(dst: *mut c_char, src: *const c_char, size: usize) -> usize;
    pub fn q_strcasecmp(s1: *const c_char, s2: *const c_char) -> c_int;
    pub fn q_strcasestr(haystack: *const c_char, needle: *const c_char) -> *mut c_char;
    pub fn q_strsplit(
        str_: *mut c_char,
        sep_set: *const c_char,
        nb_substr: *mut usize,
    ) -> *mut *mut c_char;
    pub fn q_strtrim(str_: *mut c_char) -> *mut c_char;

    /* libc */
    pub fn strlen(s: *const c_char) -> usize;
    pub fn strcmp(s1: *const c_char, s2: *const c_char) -> c_int;
    pub fn strcpy(dst: *mut c_char, src: *const c_char) -> *mut c_char;
    pub fn memset(s: *mut c_void, c: c_int, n: usize) -> *mut c_void;
    pub fn atoi(s: *const c_char) -> c_int;
    pub fn fclose(stream: *mut FILE) -> c_int;
    pub fn fscanf(stream: *mut FILE, format: *const c_char, ...) -> c_int;

    /// // COMPAT: ADR-010 -- `menu.c:1861` and `:1888` round slider values
    /// with the platform `roundf`, and those results are written into cvars
    /// that the config file records. Call through to the same libm the C
    /// build linked rather than using `f32::round`, which is an LLVM
    /// intrinsic and need not agree bit-for-bit.
    ///
    /// `menu.c:1420`, `:1849` and `:2100` also call `fabsf`, but that one is
    /// NOT declared here: IEEE-754 makes `fabs` an exact sign-bit clear with
    /// no rounding, so `f32::abs` is bit-identical by definition, and the
    /// MSVC UCRT publishes `fabsf` only as an inline in `<math.h>`, leaving
    /// no symbol for a call-through to bind to.
    pub fn roundf(x: c_float) -> c_float;
}

/// `Quake/vid.h:72` -- `extern viddef_t vid;` (`menu.c:1439`, `:1591`). The
/// ADR-011 mirror already exists in `cl_parse`; re-exported here rather than
/// declared a second time so there is one `viddef_t` layout in the crate.
pub use crate::cl_parse::{vid, viddef_t};

/// `Quake/quakedef.h:423-452` -- the `maptype_t` enumerators the maps menu
/// compares against. The enum has only non-negative enumerators that fit in
/// `int`, so C ranks it as `int`; `ExtraMaps_GetType` is declared above with
/// an `int` return for the same reason.
pub const MAPTYPE_MOD_START: c_int = 4;
/// See `MAPTYPE_MOD_START`.
pub const MAPTYPE_CUSTOM_ID_START: c_int = 8;
/// See `MAPTYPE_MOD_START`.
pub const MAPTYPE_ID_START: c_int = 12;
/// See `MAPTYPE_MOD_START`.
pub const MAPTYPE_BMODEL: c_int = 20;

/// `Quake/net.h:34` -- `NET_NAMELEN`, the length of one `qhostaddr_t`
/// (`net.h:48`); the LAN-config menu keeps a 16-entry array of them on the
/// stack (`menu.c:3707`).
pub const NET_NAMELEN: usize = 64;

/// `Quake/net.h:108` -- `enum slistScope_e { SLIST_LOOP, SLIST_LAN,
/// SLIST_INTERNET }`. All enumerators are non-negative and fit in `int`, so C
/// ranks the enum as `int`; the menu only ever passes it by value.
pub const SLIST_LAN: c_int = 1;
/// See `SLIST_LAN`.
pub const SLIST_INTERNET: c_int = 2;

/// `Quake/client.h:68` -- `SIGNONS`, the signon-message count a fully
/// connected client has received (`menu.c:2803`).
pub const SIGNONS: c_int = 4;

/// `Quake/keys.h:143`/`:145` -- `MAX_KEYS` and the glue-owned
/// `keybindings[]`. Re-exported from the `keys` mirror rather than declared a
/// second time (ADR-011: one declaration per engine symbol).
/// `Quake/common.h:480` -- `extern qboolean rogue, hipnotic;`, the
/// mission-pack gates the MP game-options menu switches its level and episode
/// tables on (`menu.c:4204`, `:4207`, ...). Re-exported from the ADR-011 owner
/// (`host_cmd.rs:398-399`) so the symbol is declared exactly once.
pub use crate::host_cmd::{hipnotic, rogue};

pub use crate::keys::{keybindings, MAX_KEYS};

extern "C" {
    /* ---------------------------------------------------------------------
     * Menu cvars. Every one is defined outside menu.c and read by it
     * (menu.c:115-137, plus scr_menuscale at :178).
     */
    pub static mut scr_fov: cvar_t;
    pub static mut scr_showfps: cvar_t;
    pub static mut cl_confirmquit: cvar_t;
    pub static mut scr_style: cvar_t;
    pub static mut scr_menuscale: cvar_t;
    pub static mut autoload: cvar_t;
    pub static mut autofastload: cvar_t;
    pub static mut r_rtshadows: cvar_t;
    pub static mut r_particles: cvar_t;
    pub static mut r_oit: cvar_t;
    pub static mut r_enhancedmodels: cvar_t;
    pub static mut r_lerpmodels: cvar_t;
    pub static mut r_lerpmove: cvar_t;
    pub static mut r_lerpturn: cvar_t;
    pub static mut vid_filter: cvar_t;
    pub static mut vid_palettize: cvar_t;
    pub static mut vid_anisotropic: cvar_t;
    pub static mut vid_fsaa: cvar_t;
    pub static mut vid_fsaamode: cvar_t;
    pub static mut host_maxfps: cvar_t;
    pub static mut snd_waterfx: cvar_t;
    pub static mut cl_bob: cvar_t;
    pub static mut cl_rollangle: cvar_t;
    pub static mut v_gunkick: cvar_t;
    pub static mut crosshair: cvar_t;
    pub static mut crosshair_def: cvar_t;

    /* Setup-menu cvars (menu.c:1113-1116). */
    pub static mut cl_name: cvar_t;
    pub static mut hostname: cvar_t;
    pub static mut cl_topcolor: cvar_t;
    pub static mut cl_bottomcolor: cvar_t;

    /* Game/graphics/sound options cvars (menu.c:1413-2600). */
    pub static mut scr_relativescale: cvar_t;
    pub static mut scr_conscale: cvar_t;
    pub static mut scr_sbaralpha: cvar_t;
    pub static mut scr_viewsize: cvar_t;
    pub static mut sensitivity: cvar_t;
    pub static mut m_pitch: cvar_t;
    pub static mut r_drawviewmodel: cvar_t;
    pub static mut r_scale: cvar_t;
    pub static mut r_waterwarp: cvar_t;
    pub static mut cl_alwaysrun: cvar_t;
    pub static mut cl_forwardspeed: cvar_t;
    pub static mut cl_startdemos: cvar_t;
    pub static mut vid_gamma: cvar_t;
    pub static mut vid_contrast: cvar_t;
    pub static mut bgmvolume: cvar_t;
    pub static mut bgm_extmusic: cvar_t;
    pub static mut sfxvolume: cvar_t;
    pub static mut registered: cvar_t;

    /* Multiplayer game-options cvars (menu.c:4000-4400). */
    pub static mut coop: cvar_t;
    pub static mut teamplay: cvar_t;
    pub static mut skill: cvar_t;
    pub static mut fraglimit: cvar_t;
    pub static mut timelimit: cvar_t;
}
